--- a/src/App.css
+++ b/src/App.css
@@ -216,9 +216,9 @@ input[type="radio"] {
   animation: wave 2s ease-in-out infinite;
 }
 
-@media screen and (max-width: 300px) {
+@media screen and (max-width: 400px) {
   .wave-text span {
-    font-size: 1rem;
+    font-size: 1.3rem;
   }
 }
 
@@ -312,6 +312,14 @@ input[type="radio"] {
   border-radius: 4px;
   cursor: pointer;
   margin: 0 20px;
+}
+
+@media screen and (max-width: 400px) {
+  .game_status button {
+    padding: 0.2rem 0.5rem;
+    font-size: 0.5rem;
+    margin: 0 8px;
+  }
 }
 
 .game_status button:hover {
